Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34116

QCursor does not support hi-dpi (retina) resolution

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0 Beta1
    • 5.1.1, 5.2.0 Alpha
    • GUI: Painting
    • None
    • Mac OS X 10.8
    • 5334a2cea76473060b4f20aa8f1d5819bb03e6c4

      It is not possible to set hi-dpi QCursor. At the moment, the system always scales the cursor on a hi-dpi screen so it looks pixelated.

      There should be a way to use hi-dpi mouse cursors.

      I've tried this by setting a QCursor constructed from a QPixmap with device pixel ratio 2.0, but it did not work. The attached example has the code. The drawPixmap() method works correctly, but the setCursor() methods do not. I'd expect the cursor to have the same size as the painted pixmap.

        1. qt5hidpicursor.zip
          2 kB
          Kari Pihkala
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            kpihkala Kari Pihkala
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes