src/plugins/platforms/cocoa/qcocoacursor.mm
@@ -308,8 +308,22 @@ NSCursor *QCocoaCursor::createCursorFromBitmap(const QBitmap *bitmap, const QBit
 
 NSCursor *QCocoaCursor::createCursorFromPixmap(const QPixmap pixmap, const QPoint hotspot)
 {
-    NSPoint hotSpot = NSMakePoint(hotspot.x(), hotspot.y());
-    NSImage *nsimage = static_cast<NSImage *>(qt_mac_create_nsimage(pixmap));
+    NSPoint hotSpot = NSMakePoint(hotspot.x() / pixmap.devicePixelRatio(),
+                                  hotspot.y() / pixmap.devicePixelRatio());
+    NSImage *nsimage;
+    if (pixmap.devicePixelRatio() > 1.0) {
+        QSize layoutSize = pixmap.size() / pixmap.devicePixelRatio();
+        QPixmap scaledPixmap = pixmap.scaled(layoutSize);
+        nsimage = static_cast<NSImage *>(qt_mac_create_nsimage(scaledPixmap));
+        CGImageRef cgImage = qt_mac_toCGImage(pixmap.toImage());
+        NSBitmapImageRep *imageRep = [[NSBitmapImageRep alloc] initWithCGImage:cgImage];
+        [nsimage addRepresentation:imageRep];
+        [imageRep release];
+        CGImageRelease(cgImage);
+    } else {
+        nsimage = static_cast<NSImage *>(qt_mac_create_nsimage(pixmap));
+    }
+
     NSCursor *nsCursor = [[NSCursor alloc] initWithImage:nsimage hotSpot: hotSpot];
     [nsimage release];
     return nsCursor;
